--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -38,34 +38,36 @@
   padding: 16px;
 }
 
-.card {
-  --bs-card-spacer-y: 1.5rem;
-  --bs-card-spacer-x: 1.5rem;
-  --bs-card-title-spacer-y: 0.875rem;
-  --bs-card-border-width: 0;
-  --bs-card-border-color: #dbdade;
-  --bs-card-border-radius: 0.375rem;
-  --bs-card-box-shadow: none;
-  --bs-card-inner-border-radius: 0.375rem;
-  --bs-card-cap-padding-y: 1.5rem;
-  --bs-card-cap-padding-x: 1.5rem;
-  --bs-card-cap-bg: transparent;
-  --bs-card-cap-color: ;
-  --bs-card-height: ;
-  --bs-card-color: ;
-  --bs-card-bg: #fff;
-  --bs-card-img-overlay-padding: 1.5rem;
-  --bs-card-group-margin: 0.75rem;
-  word-wrap: break-word;
-  background-clip: border-box;
-  background-color: var(--bs-card-bg);
-  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
-  border-radius: var(--bs-card-border-radius);
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  height: var(--bs-card-height);
-  min-width: 0;
+.accordion {
+  --bs-accordion-color: #6f6b7d;
+  --bs-accordion-bg: none !important;
+  --bs-accordion-transition: all 0.2s ease-in-out,border-radius 0.15s ease;
+  --bs-accordion-border-color: #fff;
+  --bs-accordion-border-width: 1px;
+  --bs-accordion-border-radius: 0.375rem;
+  --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
+  --bs-accordion-btn-padding-x: 1.125rem;
+  --bs-accordion-btn-padding-y: 0.82rem;
+  --bs-accordion-btn-color: #5d596c;
+  --bs-accordion-btn-bg: var(--bs-accordion-bg);
+  --bs-accordion-btn-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg width='20' height='21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m7.5 5.5 5 5-5 5' stroke='%235d596c' stroke-width='1.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='m7.5 5.5 5 5-5 5' stroke='%23fff' stroke-opacity='.1' stroke-width='1.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  --bs-accordion-btn-icon-width: 1.125rem;
+  --bs-accordion-btn-icon-transform: rotate(90deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg width='20' height='21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m7.5 5.5 5 5-5 5' stroke='%235d596c' stroke-width='1.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='m7.5 5.5 5 5-5 5' stroke='%23fff' stroke-opacity='.1' stroke-width='1.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  --bs-accordion-btn-focus-border-color: #44cddf;
+  --bs-accordion-btn-focus-box-shadow: none;
+  --bs-accordion-body-padding-x: 1.125rem;
+  --bs-accordion-body-padding-y: 0.82rem;
+  --bs-accordion-active-color: #5d596c;
+  --bs-accordion-active-bg: #fff;
+}
+
+.list-group-item {
+  background-color: var(--bs-list-group-bg);
+  border: none !important;
+  color: var(--bs-list-group-color);
+  display: block;
+  padding: var(--bs-list-group-item-padding-y) var(--bs-list-group-item-padding-x);
   position: relative;
 }
