--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -71,3 +71,46 @@
   padding: var(--bs-list-group-item-padding-y) var(--bs-list-group-item-padding-x);
   position: relative;
 }
+
+.customer .hidden {
+  display: none !important;
+}
+
+.modal-dropdown-member {
+  position: absolute;
+  z-index: 99;
+  padding: 6px 0px;
+  margin-left: 260px;
+  margin-top: 20px;
+  background: #F7FAFA;
+  border-radius: 20px;
+  box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.2509803922);
+}
+
+ /* Style the buttons that are used to open and close the accordion panel */
+ .accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  margin:10px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+  margin:10px;
+} 
