--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -114,3 +114,37 @@
   overflow: hidden;
   margin:10px;
 } 
+
+.frmb-control li {
+  cursor: pointer;
+  list-style: none;
+  margin: 0 0 -1px 0;
+  padding: 10px;
+  text-align: left;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  box-shadow: inset 0 0 0 1px #c5c5c5;
+}
+.container-input input, .container-input select, .container-input textarea {
+  font-size: 0.9385rem;
+  outline: none;
+  border: 1px solid #c5c5c5;
+  border-radius: 5px;
+  padding: 0.5rem 0.7rem;
+  color: gray;
+  transition: 0.1s ease-out;
+  width: 100%;
+  }
+  .container-input {
+      height: 100%;
+      display: block;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -ms-flex-align: center;
+      align-items: center;
+      width: 100%;
+      }
