--- a/public/css/chatify/style.css
+++ b/public/css/chatify/style.css
@@ -170,7 +170,7 @@ body {
   width: calc(100% - 20px);
   border: none;
   padding: 8px 10px;
-  border-radius: 6px;
+  border-radius: 32px;
   outline: none;
 }
 .messenger-listView-tabs {
@@ -331,6 +331,16 @@ body {
   background-size: cover;
   background-position: center center;
 }
+.avatar-initial {
+  border: none;
+  background-color: #E5DA53B2 !important;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+}
 .av-l {
   width: 100px;
   height: 100px;
@@ -385,30 +395,33 @@ body {
 .messenger-favorites > div:active {
   transform: scale(0.9);
 }
+.border-top {
+  border-top: 2px solid #D0D5DD;
+}
 .messenger-title {
   position: relative;
   margin: 0;
-  padding: 10px !important;
   text-transform: capitalize;
-  font-size: 12px;
+  font-size: 14px;
   text-align: center;
   z-index: 1;
+  padding: 0px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .messenger-title > span {
   position: relative;
   padding: 0px 10px;
   z-index: 1;
+  color: #000 !important;
+  font-weight: 600;
 }
-.messenger-title::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 1px;
-  position: absolute;
-  bottom: 50%;
-  left: 0;
-  right: 0;
-  z-index: 0;
+.badge {
+  font-size: 12px;
+  background-color: #DDE0E4;
+  border-radius: 10px;
+  padding: 2px 8px 2px 8px;
 }
 .messenger-infoView {
   display: block;
@@ -419,7 +432,7 @@ body {
 .messenger-infoView nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  column-gap: 10px;
   padding: var(--headers-padding);
 }
 .messenger-infoView nav a {
@@ -498,9 +511,10 @@ body {
 }
 .message-card .message-card-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 4px;
   max-width: 60%;
+  align-items: end;
 }
 .message-card.mc-sender .message-card-content {
   align-items: end;
@@ -542,12 +556,13 @@ body {
 .message-card .message-time {
   display: inline-block;
   font-size: 11px;
+  margin-top: 12px;
 }
 .message-card .message .message-time:before {
   content: "";
   background: transparent;
-  width: 4px;
-  height: 4px;
+  /* width: 4px;
+  height: 4px; */
   display: inline-block;
 }
 .message-card.mc-sender {
@@ -555,11 +570,11 @@ body {
 }
 .message-card.mc-sender .message {
   direction: ltr;
-  color: #fff !important;
-  background: var(--primary-color) !important;
+  color: #000 !important;
+  background: rgba(51, 182, 185, 0.2) !important;
 }
 .message-card.mc-sender .message .message-time {
-  color: rgba(255, 255, 255, 0.67);
+  color: #616A75;
 }
 
 .mc-error .message {
@@ -568,6 +583,18 @@ body {
 }
 .mc-error .message .message-time {
   color: #ff0000 !important;
+}
+.messager-sendCard > .wrapper-btn-action > .send-button {
+  background: #EBECEF !important;
+  padding: 0.75rem !important;
+  border: none;
+  cursor: pointer;
+}
+.messenger-sendCard .wrapper-btn-action {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .messenger-sendCard .send-button svg {
   color: var(--primary-color);
@@ -578,11 +605,7 @@ body {
 }
 .messenger-sendCard {
   display: none;
-  margin: 10px;
-  margin-bottom: 1rem;
-  border-radius: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding: 12px;
 }
 .messenger-sendCard form {
   width: 100%;
@@ -774,8 +797,40 @@ body {
   border-radius: 20px;
   position: absolute;
   bottom: 12%;
-  right: 6%;
+  right: 14%;
   transition: border 0.1s;
+}
+.badge-status {
+  display: flex;
+  align-items: center;
+  border-radius: 22px;
+  width: 50px;
+  background-color: #F2F4F7;
+  padding: 6px 8px;
+  margin-left: 12px;
+  justify-content: space-between;
+}
+.badge-status > .status-offline {
+  width: 8px;
+  height: 8px;
+  background: #FF0000;
+  border-radius: 20px;
+  bottom: 12%;
+  right: 14%;
+  transition: border 0.1s;
+}
+.badge-status > .status-online {
+  width: 8px;
+  height: 8px;
+  background: #4caf50;
+  border-radius: 20px;
+  bottom: 12%;
+  right: 14%;
+  transition: border 0.1s;
+}
+.badge-status > span {
+  font-size: 12px;
+  font-weight: 500;
 }
 .lastMessageIndicator {
   color: var(--primary-color) !important;
