--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -164,3 +164,13 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.loader {
+  border: none;
+  color: white;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
+}
